<resources>
    <string name="app_name">APP</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="zero">0</string>
    <string name="app_name3">Court Counter</string>
    <string name="add3points">+3 POINTS</string>
    <string name="add2points">+2 POINTS</string>
    <string name="add1point">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="app_name1">汇率转换</string>
    <string name="rmb_hint_label">请输入金额</string>
    <string name="btn_dollar_label">DOLLAR</string>
    <string name="btn_euro_label">EURO</string>
    <string name="btn_won_label">WON</string>
    <string name="btn_opencfg_label">CONFIG</string>
    <string name="btn_save_label">SAVE</string>
    <string name="menu_set_label">MENU</string>
    <string name="app_name2">BMI</string>
    <string name="height">请输入您的身高：</string>
    <string name="weight">请输入您的体重：</string>
    <string name="submit">确定</string>
    <string name="h_hint">单位是米</string>
    <string name="w_hint">单位是千克</string>
    <string name="result">点击确定显示结果</string>
    <string name="itemTitle">itemTitle</string>
    <string name="itemDetail">itemDetail</string>
</resources>
