<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.missy.rate.RateActivity">
    <EditText
        android:id="@+id/rmb"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/rmb_hint_label"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/show"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:text="@string/app_name1"
        android:layout_height="wrap_content" />

    <Button
         android:id="@+id/dollar"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar_label"/>

    <Button
        android:id="@+id/euro"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/won"
        android:onClick="onClick"
        android:text="@string/btn_won_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btn_opencfg_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="openOne"
        android:id="@+id/btn_opencfg" />
</LinearLayout>