<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.missy.rate.MainActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textA"
                android:text="@string/zero"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"
                android:textSize="70sp"
                android:textColor="#000000" />

            <Button
                android:text="@string/add3points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:text="@string/add2points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:text="@string/add1point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" />

        </LinearLayout>
        <View
            android:layout_height="325dp"
            android:background="#e6b5b5b5"
            android:layout_width="1dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center" />

            <TextView
                android:text="@string/zero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textB"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"
                android:textSize="70sp"
                android:textColor="#000000" />

            <Button
                android:text="@string/add3points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:text="@string/add2points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:text="@string/add1point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button7"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>
